Introduce IoC with SimpleInjector

--- a/LdapSearch/LdapSearch.csproj
+++ b/LdapSearch/LdapSearch.csproj
@@ -51,7 +51,14 @@
   <PropertyGroup>
     <ApplicationIcon>LdapSearch.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>LdapSearch.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SimpleInjector, Version=3.1.2.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.3.1.2\lib\net45\SimpleInjector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.DirectoryServices" />
@@ -73,9 +80,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="IImageHandler.cs" />
+    <Compile Include="ILdapHandler.cs" />
     <Compile Include="ImageHandler.cs" />
     <Compile Include="LdapHandler.cs" />
     <Compile Include="MyExtensions.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="User.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
@@ -101,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
