--- a/LdapSearch.Tests/LdapSearch.Tests.csproj
+++ b/LdapSearch.Tests/LdapSearch.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainWindowViewModelTests.cs" />
     <Compile Include="UserTests.cs" />
     <Compile Include="ImageHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
