Clean more code

--- a/LdapSearch/LdapSearch.csproj
+++ b/LdapSearch/LdapSearch.csproj
@@ -103,7 +103,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="IServiceHandler.cs" />
-    <Compile Include="MyService.cs" />
+    <Compile Include="ServiceInfoViewModel.cs" />
+    <Compile Include="ServiceInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceHandler.cs" />
     <Compile Include="ViewModelBase.cs" />
