--- a/MicroManager/MicroManager.csproj
+++ b/MicroManager/MicroManager.csproj
@@ -86,6 +86,7 @@
     </Reference>
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -104,6 +105,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="IServiceHandler.cs" />
+    <Compile Include="NotifyIconHandler.cs" />
+    <Compile Include="Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
     <Compile Include="ServiceInfoViewModel.cs" />
     <Compile Include="ServiceInfo.cs" />
     <Compile Include="Program.cs" />
@@ -153,6 +160,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="MicroManager.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\grey.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\red.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
