Remember config settings

--- a/MicroManager/App.config
+++ b/MicroManager/App.config
@@ -12,7 +12,8 @@
     <MicroManager.Settings>
       <setting name="WindowPlacement" serializeAs="Xml">
         <value>
-          <WindowPlacement xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <WindowPlacement xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <length>50</length>
             <flags>0</flags>
             <showCmd>1</showCmd>
@@ -32,6 +33,12 @@
             </normalPosition>
           </WindowPlacement>
         </value>
+      </setting>
+      <setting name="Scale" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="TopMost" serializeAs="String">
+        <value>False</value>
       </setting>
     </MicroManager.Settings>
   </userSettings>
