--- a/MicroManager.Tests/MicroManager.Tests.csproj
+++ b/MicroManager.Tests/MicroManager.Tests.csproj
@@ -93,7 +93,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MicroManager\MicroManager.csproj">
       <Project>{da2a9cc7-5f3d-4922-8fa3-2d8a5f1ebfbb}</Project>
-      <Name>LdapSearch</Name>
+      <Name>MicroManager</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
