--- a/MicroManager/MicroManager.csproj
+++ b/MicroManager/MicroManager.csproj
@@ -108,6 +108,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ColorEvaluator.cs" />
+    <Compile Include="EvaluatorBase.cs" />
     <Compile Include="IconViewModel.cs" />
     <Compile Include="IServiceHandler.cs" />
     <Compile Include="WindowPlacementHandler.cs" />
