Update target framework version to 4.6.1

--- a/MicroManager/App.config
+++ b/MicroManager/App.config
@@ -6,14 +6,13 @@
     </sectionGroup>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <userSettings>
     <MicroManager.Settings>
       <setting name="WindowPlacement" serializeAs="Xml">
         <value>
-          <WindowPlacement xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <WindowPlacement xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <length>50</length>
             <flags>0</flags>
             <showCmd>1</showCmd>
