--- a/MicroManager/packages.config
+++ b/MicroManager/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="SimpleInjector" version="3.1.2" targetFramework="net45" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
 </packages>
